[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "fastapi>=0.115.12",
    "langchain>=0.3.23",
    "langchain-community==0.3.21",
    "langchain-mcp>=0.2.1",
    "langchain-mcp-adapters>=0.0.8",
    "langchain-openai>=0.3.12",
    "langgraph>=0.3.30",
    "mcp>=1.6.0",
    "openai>=1.72.0",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.0",
]
